--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,5 +50,5 @@ jobs:
           echo "name">> text.txt
           sed -i 's/name/${{ secrets.name }}/g' text.txt
           sed -i 's/dev/hello/g' text.txt
-          getsubnetid=$(if [ '${{ github.event.inputs.region }}' == 'East US' ];then echo "ets-p-zeaus-network-rg"; else echo "ets-p-zweus-network-rg"; fi)
+          getsubnetid=$(if [ '${{ github.event.inputs.region }}' == 'East US' ];then echo "${{ secrets.NETWORK_RG_NAME_EAST }}"; else echo "${{ secrets.NETWORK_RG_NAME_WEST }}"; fi)
           echo "${getsubnetid}"
