--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,15 @@ jobs:
           echo "name">> text.txt
           sed -i 's/name/${{ secrets.name }}/g' text.txt
           sed -i 's/dev/hello/g' text.txt
+      - name: "create file"
+        run: |
+          touch text.txt
+          echo "name">> text.txt
+          sed -i 's/name/${{ secrets.name }}/g' text.txt
+          sed -i 's/dev/hello/g' text.txt
+          getsubnetid=$(if [ '${{ github.event.inputs.region }}' == 'East US' ];then echo "${{ secrets.NETWORK_RG_NAME_EAST }}"; else echo "${{ secrets.NETWORK_RG_NAME_WEST }}"; fi)
+          echo "${getsubnetid}"
+          echo "${getsubnetid}">> text.txt
       - name: "tar"
         run: tar -cvf file.tar text.txt 
       - name: "upload"
@@ -44,11 +53,3 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: startup-scripts
-      - name: "create file"
-        run: |
-          touch text.txt
-          echo "name">> text.txt
-          sed -i 's/name/${{ secrets.name }}/g' text.txt
-          sed -i 's/dev/hello/g' text.txt
-          getsubnetid=$(if [ '${{ github.event.inputs.region }}' == 'East US' ];then echo "${{ secrets.NETWORK_RG_NAME_EAST }}"; else echo "${{ secrets.NETWORK_RG_NAME_WEST }}"; fi)
-          echo "${getsubnetid}"
