--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ env:
 
 jobs:
   check:
+    environment: ${{ github.event.inputs.environment }}
     name: check
     runs-on: ubuntu-latest
     steps:
