--- a/.github/workflows/Main-workflow.yml
+++ b/.github/workflows/Main-workflow.yml
@@ -13,15 +13,15 @@ jobs:
               echo github.run_attempt
               echo ${{ fromJSON(github.run_attempt) }}
               
-              if [[ fromJSON(github.run_attempt) != ${{ vars.RETRY_ATTEMPT_LIMIT }}  ]]; then
+              if [[ ${{ fromJSON(github.run_attempt) }} != ${{ vars.RETRY_ATTEMPT_LIMIT }}  ]]; then
                 echo "here not equal"
               fi;
               
-              if [[ fromJSON(github.run_attempt) < ${{ vars.RETRY_ATTEMPT_LIMIT }}  ]]; then
+              if [[ ${{ fromJSON(github.run_attempt) }} < ${{ vars.RETRY_ATTEMPT_LIMIT }}  ]]; then
                   echo "here less than"
               fi;
           
-              if [[ fromJSON(github.run_attempt) == ${{ vars.RETRY_ATTEMPT_LIMIT }}  ]]; then
+              if [[ ${{ fromJSON(github.run_attempt) }} == ${{ vars.RETRY_ATTEMPT_LIMIT }}  ]]; then
                 echo "here equal"
               fi;
           
@@ -30,7 +30,7 @@ jobs:
             run: exit 1
                 
     retry-on-failure:
-        if: failure() && (fromJSON(github.run_attempt) < ${{ vars.RETRY_ATTEMPT_LIMIT }}) 
+        if: failure() && (${{ fromJSON(github.run_attempt) }} < ${{ vars.RETRY_ATTEMPT_LIMIT }}) 
         needs: [some-other-step]
         runs-on: ubuntu-latest
         steps:
