--- a/.github/workflows/Main-workflow.yml
+++ b/.github/workflows/Main-workflow.yml
@@ -29,7 +29,7 @@ jobs:
             run: exit 1
                 
     retry-on-failure:
-        if: failure() && ${{ fromJSON(github.run_attempt) }} < ${{ vars.RETRY_ATTEMPT_LIMIT }} 
+        if: failure() && ${{ fromJSON(github.run_attempt) }} < 3
         needs: [some-other-step]
         runs-on: ubuntu-latest
         steps:
