--- a/.github/workflows/Main-workflow.yml
+++ b/.github/workflows/Main-workflow.yml
@@ -29,7 +29,8 @@ jobs:
             run: exit 1
                 
     retry-on-failure:
-        if: failure() && ${{ fromJSON(github.run_attempt) }} < 3
+        environment: dev
+        if: failure() && ${{ fromJSON(github.run_attempt) }} < ${{ vars.RETRY_ATTEMPT_LIMIT }}
         needs: [some-other-step]
         runs-on: ubuntu-latest
         steps:
