--- a/.github/workflows/Main-workflow.yml
+++ b/.github/workflows/Main-workflow.yml
@@ -30,7 +30,7 @@ jobs:
                 
     retry-on-failure:
         environment: dev
-        if: failure() && ( fromJSON(github.run_attempt) < ${{ vars.RETRY_ATTEMPT_LIMIT }} )
+        if: failure() &&  fromJSON(github.run_attempt) < 3
         needs: [some-other-step]
         runs-on: ubuntu-latest
         steps:
